# PenguinGame

./: .gitignore  CMakeLists.txt  README.md  a.out  game.c  perlin_gen.c
Board/: BOARD.md  board.c  board.h  board.md  board_functions.h  gaussian.c  gaussian.h  move_player.c  perlin_gen.c  perlin_gen.h
GUI/: autonomous.c  gui.h  interactive.c
Placement/: heat_based.c  place_player.c  placement.h  placement.md
Tutorials/: T2  T2.c
